{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 226,
  "lineage": "8bd7d9b7-498f-b0f3-f2fe-68a5a12cb6c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "calvin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f18fda9b0a894f2",
            "arn": "arn:aws:ec2:ap-south-1:750819667599:elastic-ip/eipalloc-03f18fda9b0a894f2",
            "domain": "vpc",
            "id": "eipalloc-03f18fda9b0a894f2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-207-169-185.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.169.185",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-eip"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-eip",
              "Project": "grand-calvin"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "eipalloc-03f18fda9b0a894f2",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "calvin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b8c9bfaf09f03048",
            "arn": "arn:aws:ec2:ap-south-1:750819667599:instance/i-0a9acde77c21e3c7d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "grand-calvin-instance-profile",
            "id": "i-0a9acde77c21e3c7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a36837cc27491b39"
              }
            ],
            "primary_network_interface_id": "eni-0a36837cc27491b39",
            "private_dns": "ip-10-40-1-82.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.1.82",
            "public_dns": "ec2-13-126-145-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.145.171",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:750819667599:key/906dbe16-650d-4829-910b-c1df2fcba2ac",
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "grand-calvin"
                },
                "throughput": 125,
                "volume_id": "vol-0a0c7fde9563eeed4",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f80a95d7a3db5281",
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin",
              "Role": "shared-docker-host"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin",
              "Project": "grand-calvin",
              "Role": "shared-docker-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-00557c1ff40153a24"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "i-0a9acde77c21e3c7d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_ecr_repository.student",
            "aws_iam_instance_profile.calvin",
            "aws_iam_role.calvin",
            "aws_iam_role_policy.calvin_ecr_pull",
            "aws_iam_role_policy_attachment.calvin_ssm",
            "aws_internet_gateway.calvin",
            "aws_route_table.public",
            "aws_route_table_association.public",
            "aws_security_group.calvin",
            "aws_subnet.public",
            "aws_vpc.calvin",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.calvin_assume_role",
            "data.aws_iam_policy_document.calvin_ecr_pull",
            "data.aws_partition.current",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "calvin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750819667599:internet-gateway/igw-0868ed7439b5238de",
            "id": "igw-0868ed7439b5238de",
            "owner_id": "750819667599",
            "region": "ap-south-1",
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-igw"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-igw",
              "Project": "grand-calvin"
            },
            "vpc_id": "vpc-09a8dd45d2694fe78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "igw-0868ed7439b5238de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.calvin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750819667599:route-table/rtb-0773cd6fe11c5497f",
            "id": "rtb-0773cd6fe11c5497f",
            "owner_id": "750819667599",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0868ed7439b5238de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-public-rt"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-public-rt",
              "Project": "grand-calvin"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a8dd45d2694fe78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "rtb-0773cd6fe11c5497f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.calvin",
            "aws_vpc.calvin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8dcc5e65ecafae",
            "region": "ap-south-1",
            "route_table_id": "rtb-0773cd6fe11c5497f",
            "subnet_id": "subnet-0f80a95d7a3db5281"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "rtbassoc-0db8dcc5e65ecafae",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.calvin",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.calvin",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "calvin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750819667599:security-group/sg-00557c1ff40153a24",
            "description": "Public access to assigned student application ports; no SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for SSM, ECR and package installation",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00557c1ff40153a24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Student apps from 0.0.0.0/0",
                "from_port": 8101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8130
              }
            ],
            "name": "grand-calvin-e373f5dd46c9ccaf4f0f46d2b7",
            "name_prefix": "grand-calvin-",
            "owner_id": "750819667599",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-sg"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-sg",
              "Project": "grand-calvin"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a8dd45d2694fe78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "sg-00557c1ff40153a24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.calvin"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750819667599:subnet/subnet-0f80a95d7a3db5281",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80a95d7a3db5281",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750819667599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-public"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-public",
              "Project": "grand-calvin"
            },
            "vpc_id": "vpc-09a8dd45d2694fe78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "subnet-0f80a95d7a3db5281",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.calvin",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "calvin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750819667599:vpc/vpc-09a8dd45d2694fe78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-07d7f4ffdcbb1147a",
            "default_route_table_id": "rtb-0caa2c9d0e2367dca",
            "default_security_group_id": "sg-0dc8f026bb9e9d609",
            "dhcp_options_id": "dopt-05068f605a038fa47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a8dd45d2694fe78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0caa2c9d0e2367dca",
            "owner_id": "750819667599",
            "region": "ap-south-1",
            "tags": {
              "Environment": "training",
              "Name": "grand-calvin-vpc"
            },
            "tags_all": {
              "Environment": "training",
              "ManagedBy": "Terraform",
              "Name": "grand-calvin-vpc",
              "Project": "grand-calvin"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "vpc-09a8dd45d2694fe78",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}